--- a/frontend/src/components/Simulator/_simulator.scss
+++ b/frontend/src/components/Simulator/_simulator.scss
@@ -2,31 +2,26 @@
   margin-left: 100px;
   margin-right: 100px;
   color: $text;
-  background-color: #fefeff;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: minmax(100px auto);
   gap: 1em;
-  min-height: 400px;
   align-items: center;
-  background: #c4c4c4;
-  box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
-    0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
-    0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
-    0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
-    0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
-    0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
+}
+
+.menu {
+  color: $primary;
+
+  .header-text {
+    font-size: 14px;
+    padding-left: 200px;
+    padding-right: 200px;
+  }
 }
 
 .room {
-  background-color: #fefeff;
-  border-radius: 20px;
+  width: 400px;
   height: 300px;
-  width: 600px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
 }
 
 .room-soil {
@@ -36,7 +31,6 @@
   transform-origin: left top;
   position: relative;
   top: 60%;
-  left: 10%;
   height: 250px;
   width: 250px;
 }
