--- a/frontend/src/components/Simulator/_simulator.scss
+++ b/frontend/src/components/Simulator/_simulator.scss
@@ -4,13 +4,12 @@
   color: $text;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: minmax(100px auto);
   gap: 1em;
   align-items: center;
 }
 
 .menu {
-  color: $primary;
+  color: $text;
 
   .header-text {
     font-size: 14px;
@@ -33,6 +32,17 @@
   top: 60%;
   height: 250px;
   width: 250px;
+}
+
+.room-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: minmax(auto, 100%);
+  gap: 1em;
+}
+
+.iso-element {
+  background-color: $primary;
 }
 
 .soil-shadow {
@@ -83,6 +93,43 @@
   width: 250px;
   left: 250px;
 }
+
+// Parameters menu ==========================================
+
+.room-parameters {
+  background: #c4c4c4;
+  box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
+    0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
+    0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
+    0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
+    0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
+    0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
+  background-color: $primary;
+  color: $text;
+  height: 80%;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+
+  .parameters-header {
+    background-color: $secondary;
+    color: $primary;
+    border-radius: 5px 5px 0 0;
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    -ms-border-radius: 5px 5px 0 0;
+    -o-border-radius: 5px 5px 0 0;
+  }
+
+  .parameters-title {
+    margin: 0;
+    padding: 10px;
+  }
+}
+
+// ==========================================================
 
 /* .student {
   background-color: $secondary;
