--- a/frontend/src/components/Simulator/_simulator.scss
+++ b/frontend/src/components/Simulator/_simulator.scss
@@ -1,11 +1,16 @@
 .wrapper {
-  margin-left: 100px;
-  margin-right: 100px;
   color: $text;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 1em;
   align-items: center;
+  margin-right: 10px;
+  margin-left: 10px;
+
+  @include tablet {
+    grid-template-columns: 2fr 1fr;
+    margin-right: 40px;
+  }
 }
 
 .menu {
@@ -13,91 +18,133 @@
 
   .header-text {
     font-size: 14px;
-    padding-left: 200px;
-    padding-right: 200px;
   }
 }
 
-.room {
-  width: 400px;
-  height: 300px;
+// Room styles ==============================================
+
+.room-container {
+  .room {
+    padding-top: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .room-soil {
+      background-color: white;
+      transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
+      transform-style: preserve-3d;
+      height: 200px;
+      width: 200px;
+      -webkit-transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
+      -moz-transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
+      -ms-transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
+      -o-transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
+
+      @include tablet {
+        height: 300px;
+        width: 300px;
+      }
+    }
+
+    .room-grid {
+      height: 100%;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+      gap: 1em;
+    }
+
+    .iso-element {
+      background-color: $primary;
+
+      .student-box {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transform-style: preserve-3d;
+        height: 80px;
+        width: 80px;
+      }
+
+      .student-wrapper {
+        transform: rotate(45deg) rotateX(-90deg);
+        -webkit-transform: rotate(45deg) rotateX(-90deg);
+        -moz-transform: rotate(45deg) rotateX(-90deg);
+        -ms-transform: rotate(45deg) rotateX(-90deg);
+        -o-transform: rotate(45deg) rotateX(-90deg);
+      }
+    }
+
+    .soil-shadow {
+      box-shadow: -100px 100px 80px rgba(0, 0, 0, 0.07),
+        -41.8px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
+        -22.34px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
+        -12.6px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
+        -6.7px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
+        -2.8px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
+    }
+
+    .wall {
+      position: absolute;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      z-index: 1;
+      left: 0;
+      bottom: 100%;
+      transform-origin: left bottom;
+      transform-style: preserve-3d;
+      transform: translateZ(0);
+      -webkit-transform: translateZ(0);
+      -moz-transform: translateZ(0);
+      -ms-transform: translateZ(0);
+      -o-transform: translateZ(0);
+    }
+
+    .left-wall {
+      background: #d9d9d9;
+      transform: rotateX(-90deg);
+      -webkit-transform: rotateX(-90deg);
+      -moz-transform: rotateX(-90deg);
+      -ms-transform: rotateX(-90deg);
+      -o-transform: rotateX(-90deg);
+      height: 60px;
+      width: 200px;
+
+      @include tablet {
+        height: 80px;
+        width: 300px;
+      }
+    }
+
+    .right-wall {
+      background: #e7e7e7;
+      transform: rotate(90deg) rotateX(-90deg);
+      -webkit-transform: rotate(90deg) rotateX(-90deg);
+      -moz-transform: rotate(90deg) rotateX(-90deg);
+      -ms-transform: rotate(90deg) rotateX(-90deg);
+      -o-transform: rotate(90deg) rotateX(-90deg);
+      height: 60px;
+      width: 200px;
+      left: 200px;
+
+      @include tablet {
+        height: 80px;
+        width: 300px;
+        left: 300px;
+      }
+    }
+  }
 }
 
-.room-soil {
-  background-color: white;
-  transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
-  transform-style: preserve-3d;
-  transform-origin: left top;
-  position: relative;
-  top: 60%;
-  height: 250px;
-  width: 250px;
-}
-
-.room-grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: minmax(auto, 100%);
-  gap: 1em;
-}
-
-.iso-element {
-  background-color: $primary;
-}
-
-.soil-shadow {
-  box-shadow: -100px 100px 80px rgba(0, 0, 0, 0.07),
-    -41.8px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
-    -22.34px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
-    -12.6px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
-    -6.7px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
-    -2.8px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
-}
-
-.wall {
-  position: absolute;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  z-index: 1;
-  left: 0;
-  bottom: 100%;
-  transform-origin: left bottom;
-  transform-style: preserve-3d;
-  transform: translateZ(0);
-  -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  -o-transform: translateZ(0);
-}
-
-.left-wall {
-  background: #d9d9d9;
-  transform: rotateX(-90deg);
-  -webkit-transform: rotateX(-90deg);
-  -moz-transform: rotateX(-90deg);
-  -ms-transform: rotateX(-90deg);
-  -o-transform: rotateX(-90deg);
-  height: 80px;
-  width: 250px;
-}
-
-.right-wall {
-  background: #e7e7e7;
-  transform: rotate(90deg) rotateX(-90deg);
-  -webkit-transform: rotate(90deg) rotateX(-90deg);
-  -moz-transform: rotate(90deg) rotateX(-90deg);
-  -ms-transform: rotate(90deg) rotateX(-90deg);
-  -o-transform: rotate(90deg) rotateX(-90deg);
-  height: 80px;
-  width: 250px;
-  left: 250px;
-}
+// ==========================================================
 
 // Parameters menu ==========================================
 
 .room-parameters {
-  background: #c4c4c4;
+  background: $primary;
   box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
     0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
     0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
@@ -130,12 +177,3 @@
 }
 
 // ==========================================================
-
-/* .student {
-  background-color: $secondary;
-  transform: rotate(115deg) skewX(-20deg) skewY(15deg) scale(0.5);
-  -webkit-transform: rotate(115deg) skewX(-20deg) skewY(15deg) scale(0.5);
-  -moz-transform: rotate(115deg) skewX(-20deg) skewY(15deg) scale(0.5);
-  -ms-transform: rotate(115deg) skewX(-20deg) skewY(15deg) scale(0.5);
-  -o-transform: rotate(115deg) skewX(-20deg) skewY(15deg) scale(0.5);
-} */
