--- a/frontend/src/components/Simulator/_simulator.scss
+++ b/frontend/src/components/Simulator/_simulator.scss
@@ -30,7 +30,7 @@
     align-items: center;
     justify-content: center;
 
-    .room-soil {
+    .room-floor {
       background-color: white;
       transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
       transform-style: preserve-3d;
@@ -64,20 +64,46 @@
         justify-content: center;
         align-items: center;
         transform-style: preserve-3d;
-        height: 80px;
-        width: 80px;
       }
 
       .student-wrapper {
+        img {
+          max-width: 40px;
+          transform: translate(-25%, -100%);
+          -webkit-transform: translate(-25%, -100%);
+          -moz-transform: translate(-25%, -100%);
+          -ms-transform: translate(-25%, -100%);
+          -o-transform: translate(-25%, -100%);
+
+          @include tablet {
+            max-width: 60px;
+          }
+        }
+        transform-style: preserve-3d;
+        position: relative;
+        width: 0;
+        height: 0;
+        left: 0px;
+        top: 25px;
+        transition: opacity 0.3s, transform 0.3s;
         transform: rotate(45deg) rotateX(-90deg);
+        transform-origin: left top;
         -webkit-transform: rotate(45deg) rotateX(-90deg);
         -moz-transform: rotate(45deg) rotateX(-90deg);
         -ms-transform: rotate(45deg) rotateX(-90deg);
         -o-transform: rotate(45deg) rotateX(-90deg);
+        -webkit-transition: opacity 0.3s, transform 0.3s;
+        -moz-transition: opacity 0.3s, transform 0.3s;
+        -ms-transition: opacity 0.3s, transform 0.3s;
+        -o-transition: opacity 0.3s, transform 0.3s;
+
+        @include tablet {
+          top: 40px;
+        }
       }
     }
 
-    .soil-shadow {
+    .floor-shadow {
       box-shadow: -100px 100px 80px rgba(0, 0, 0, 0.07),
         -41.8px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
         -22.34px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
