--- a/frontend/src/sass/main.css
+++ b/frontend/src/sass/main.css
@@ -41,7 +41,7 @@
           justify-content: center;
 }
 
-.room-container .room .room-soil {
+.room-container .room .room-floor {
   background-color: white;
   transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
   -webkit-transform-style: preserve-3d;
@@ -55,7 +55,7 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .room-container .room .room-soil {
+  .room-container .room .room-floor {
     height: 300px;
     width: 300px;
   }
@@ -89,19 +89,55 @@
           align-items: center;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
-  height: 80px;
-  width: 80px;
 }
 
 .room-container .room .iso-element .student-wrapper {
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  position: relative;
+  width: 0;
+  height: 0;
+  left: 0px;
+  top: 25px;
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s, -webkit-transform 0.3s;
   transform: rotate(45deg) rotateX(-90deg);
+  -webkit-transform-origin: left top;
+          transform-origin: left top;
   -webkit-transform: rotate(45deg) rotateX(-90deg);
   -moz-transform: rotate(45deg) rotateX(-90deg);
   -ms-transform: rotate(45deg) rotateX(-90deg);
   -o-transform: rotate(45deg) rotateX(-90deg);
+  -webkit-transition: opacity 0.3s, transform 0.3s;
+  -moz-transition: opacity 0.3s, transform 0.3s;
+  -ms-transition: opacity 0.3s, transform 0.3s;
+  -o-transition: opacity 0.3s, transform 0.3s;
 }
 
-.room-container .room .soil-shadow {
+.room-container .room .iso-element .student-wrapper img {
+  max-width: 40px;
+  transform: translate(-25%, -100%);
+  -webkit-transform: translate(-25%, -100%);
+  -moz-transform: translate(-25%, -100%);
+  -ms-transform: translate(-25%, -100%);
+  -o-transform: translate(-25%, -100%);
+}
+
+@media only screen and (min-width: 768px) {
+  .room-container .room .iso-element .student-wrapper img {
+    max-width: 60px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .room-container .room .iso-element .student-wrapper {
+    top: 40px;
+  }
+}
+
+.room-container .room .floor-shadow {
   -webkit-box-shadow: -100px 100px 80px rgba(0, 0, 0, 0.07), -41.8px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198), -22.34px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275), -12.6px 12.5216px 10.0172px rgba(0, 0, 0, 0.035), -6.7px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725), -2.8px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
           box-shadow: -100px 100px 80px rgba(0, 0, 0, 0.07), -41.8px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198), -22.34px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275), -12.6px 12.5216px 10.0172px rgba(0, 0, 0, 0.035), -6.7px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725), -2.8px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
 }
