--- a/frontend/src/components/Simulator/_simulator.scss
+++ b/frontend/src/components/Simulator/_simulator.scss
@@ -55,10 +55,14 @@
       gap: 1em;
     }
 
+    .doble {
+      grid-row: 2/4;
+    }
+
     .iso-element {
       background-color: $primary;
 
-      .student-box {
+      .iso-box {
         position: absolute;
         display: flex;
         justify-content: center;
@@ -83,8 +87,8 @@
         position: relative;
         width: 0;
         height: 0;
-        left: 0px;
-        top: 25px;
+        left: -4px;
+        top: 27px;
         transition: opacity 0.3s, transform 0.3s;
         transform: rotate(45deg) rotateX(-90deg);
         transform-origin: left top;
@@ -99,6 +103,115 @@
 
         @include tablet {
           top: 40px;
+        }
+      }
+
+      .shelf-wrapper {
+        img {
+          max-width: 36px;
+          transform: translate(-25%, -100%);
+          -webkit-transform: translate(-25%, -100%);
+          -moz-transform: translate(-25%, -100%);
+          -ms-transform: translate(-25%, -100%);
+          -o-transform: translate(-25%, -100%);
+
+          @include tablet {
+            max-width: 55px;
+          }
+        }
+        transform-style: preserve-3d;
+        position: relative;
+        width: 0;
+        height: 0;
+        left: 0px;
+        top: 15px;
+        transition: opacity 0.3s, transform 0.3s;
+        transform: rotate(45deg) rotateX(-90deg);
+        transform-origin: left top;
+        -webkit-transform: rotate(45deg) rotateX(-90deg);
+        -moz-transform: rotate(45deg) rotateX(-90deg);
+        -ms-transform: rotate(45deg) rotateX(-90deg);
+        -o-transform: rotate(45deg) rotateX(-90deg);
+        -webkit-transition: opacity 0.3s, transform 0.3s;
+        -moz-transition: opacity 0.3s, transform 0.3s;
+        -ms-transition: opacity 0.3s, transform 0.3s;
+        -o-transition: opacity 0.3s, transform 0.3s;
+
+        @include tablet {
+          top: 25px;
+        }
+      }
+      .desk-wrapper {
+        img {
+          max-width: 55px;
+          transform: translate(-25%, -100%);
+          -webkit-transform: translate(-25%, -100%);
+          -moz-transform: translate(-25%, -100%);
+          -ms-transform: translate(-25%, -100%);
+          -o-transform: translate(-25%, -100%);
+
+          @include tablet {
+            max-width: 85px;
+          }
+        }
+        transform-style: preserve-3d;
+        position: relative;
+        width: 0;
+        height: 0;
+        left: -10px;
+        top: 15px;
+        transition: opacity 0.3s, transform 0.3s;
+        transform: rotate(45deg) rotateX(-90deg);
+        transform-origin: left top;
+        -webkit-transform: rotate(45deg) rotateX(-90deg);
+        -moz-transform: rotate(45deg) rotateX(-90deg);
+        -ms-transform: rotate(45deg) rotateX(-90deg);
+        -o-transform: rotate(45deg) rotateX(-90deg);
+        -webkit-transition: opacity 0.3s, transform 0.3s;
+        -moz-transition: opacity 0.3s, transform 0.3s;
+        -ms-transition: opacity 0.3s, transform 0.3s;
+        -o-transition: opacity 0.3s, transform 0.3s;
+
+        @include tablet {
+          top: 25px;
+          left: -15px;
+        }
+      }
+
+      .people-wrapper {
+        img {
+          max-width: 20px;
+          transform: translate(-25%, -100%);
+          -webkit-transform: translate(-25%, -100%);
+          -moz-transform: translate(-25%, -100%);
+          -ms-transform: translate(-25%, -100%);
+          -o-transform: translate(-25%, -100%);
+
+          @include tablet {
+            max-width: 35px;
+          }
+        }
+        transform-style: preserve-3d;
+        position: relative;
+        width: 0;
+        height: 0;
+        left: 10px;
+        top: 40px;
+        transition: opacity 0.3s, transform 0.3s;
+        transform: rotate(45deg) rotateX(-90deg);
+        transform-origin: left top;
+        -webkit-transform: rotate(45deg) rotateX(-90deg);
+        -moz-transform: rotate(45deg) rotateX(-90deg);
+        -ms-transform: rotate(45deg) rotateX(-90deg);
+        -o-transform: rotate(45deg) rotateX(-90deg);
+        -webkit-transition: opacity 0.3s, transform 0.3s;
+        -moz-transition: opacity 0.3s, transform 0.3s;
+        -ms-transition: opacity 0.3s, transform 0.3s;
+        -o-transition: opacity 0.3s, transform 0.3s;
+
+        @include tablet {
+          top: 65px;
+          left: 15px;
         }
       }
     }
