Modularización de scss

--- a/frontend/src/components/Simulator/_simulator.scss
+++ b/frontend/src/components/Simulator/_simulator.scss
@@ -1,3 +1,6 @@
+@import "./sass/room";
+@import "./sass/parameters";
+
 .wrapper {
   color: $text;
   display: grid;
@@ -25,302 +28,3 @@
     }
   }
 }
-
-// Room styles ==============================================
-
-.room-container {
-  @include desktop {
-    zoom: 1.4;
-  }
-  .room {
-    padding-top: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    .room-floor {
-      background-color: white;
-      transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
-      transform-style: preserve-3d;
-      height: 200px;
-      width: 200px;
-      -webkit-transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
-      -moz-transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
-      -ms-transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
-      -o-transform: rotateX(60deg) rotateY(0deg) rotate(-45deg);
-
-      @include desktop {
-        height: 300px;
-        width: 300px;
-      }
-    }
-
-    .room-grid {
-      height: 100%;
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(4, 1fr);
-      gap: 1em;
-    }
-
-    .doble {
-      grid-row: 2/4;
-    }
-
-    .iso-element {
-      background-color: $primary;
-
-      .iso-box {
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transform-style: preserve-3d;
-      }
-
-      .student-wrapper {
-        img {
-          max-width: 40px;
-          transform: translate(-25%, -100%);
-          -webkit-transform: translate(-25%, -100%);
-          -moz-transform: translate(-25%, -100%);
-          -ms-transform: translate(-25%, -100%);
-          -o-transform: translate(-25%, -100%);
-
-          @include desktop {
-            max-width: 59px;
-          }
-        }
-        transform-style: preserve-3d;
-        position: relative;
-        width: 0;
-        height: 0;
-        left: -4px;
-        top: 27px;
-        transition: opacity 0.3s, transform 0.3s;
-        transform: rotate(45deg) rotateX(-90deg);
-        transform-origin: left top;
-        -webkit-transform: rotate(45deg) rotateX(-90deg);
-        -moz-transform: rotate(45deg) rotateX(-90deg);
-        -ms-transform: rotate(45deg) rotateX(-90deg);
-        -o-transform: rotate(45deg) rotateX(-90deg);
-        -webkit-transition: opacity 0.3s, transform 0.3s;
-        -moz-transition: opacity 0.3s, transform 0.3s;
-        -ms-transition: opacity 0.3s, transform 0.3s;
-        -o-transition: opacity 0.3s, transform 0.3s;
-
-        @include desktop {
-          top: 40px;
-        }
-      }
-
-      .shelf-wrapper {
-        img {
-          max-width: 36px;
-          transform: translate(-25%, -100%);
-          -webkit-transform: translate(-25%, -100%);
-          -moz-transform: translate(-25%, -100%);
-          -ms-transform: translate(-25%, -100%);
-          -o-transform: translate(-25%, -100%);
-
-          @include desktop {
-            max-width: 55px;
-          }
-        }
-        transform-style: preserve-3d;
-        position: relative;
-        width: 0;
-        height: 0;
-        left: 0px;
-        top: 15px;
-        transition: opacity 0.3s, transform 0.3s;
-        transform: rotate(45deg) rotateX(-90deg);
-        transform-origin: left top;
-        -webkit-transform: rotate(45deg) rotateX(-90deg);
-        -moz-transform: rotate(45deg) rotateX(-90deg);
-        -ms-transform: rotate(45deg) rotateX(-90deg);
-        -o-transform: rotate(45deg) rotateX(-90deg);
-        -webkit-transition: opacity 0.3s, transform 0.3s;
-        -moz-transition: opacity 0.3s, transform 0.3s;
-        -ms-transition: opacity 0.3s, transform 0.3s;
-        -o-transition: opacity 0.3s, transform 0.3s;
-
-        @include desktop {
-          top: 25px;
-        }
-      }
-      .desk-wrapper {
-        img {
-          max-width: 55px;
-          transform: translate(-25%, -100%);
-          -webkit-transform: translate(-25%, -100%);
-          -moz-transform: translate(-25%, -100%);
-          -ms-transform: translate(-25%, -100%);
-          -o-transform: translate(-25%, -100%);
-
-          @include desktop {
-            max-width: 85px;
-          }
-        }
-        transform-style: preserve-3d;
-        position: relative;
-        width: 0;
-        height: 0;
-        left: -10px;
-        top: 15px;
-        transition: opacity 0.3s, transform 0.3s;
-        transform: rotate(45deg) rotateX(-90deg);
-        transform-origin: left top;
-        -webkit-transform: rotate(45deg) rotateX(-90deg);
-        -moz-transform: rotate(45deg) rotateX(-90deg);
-        -ms-transform: rotate(45deg) rotateX(-90deg);
-        -o-transform: rotate(45deg) rotateX(-90deg);
-        -webkit-transition: opacity 0.3s, transform 0.3s;
-        -moz-transition: opacity 0.3s, transform 0.3s;
-        -ms-transition: opacity 0.3s, transform 0.3s;
-        -o-transition: opacity 0.3s, transform 0.3s;
-
-        @include desktop {
-          top: 25px;
-          left: -15px;
-        }
-      }
-
-      .people-wrapper {
-        img {
-          max-width: 20px;
-          transform: translate(-25%, -100%);
-          -webkit-transform: translate(-25%, -100%);
-          -moz-transform: translate(-25%, -100%);
-          -ms-transform: translate(-25%, -100%);
-          -o-transform: translate(-25%, -100%);
-
-          @include desktop {
-            max-width: 35px;
-          }
-        }
-        transform-style: preserve-3d;
-        position: relative;
-        width: 0;
-        height: 0;
-        left: 10px;
-        top: 40px;
-        transition: opacity 0.3s, transform 0.3s;
-        transform: rotate(45deg) rotateX(-90deg);
-        transform-origin: left top;
-        -webkit-transform: rotate(45deg) rotateX(-90deg);
-        -moz-transform: rotate(45deg) rotateX(-90deg);
-        -ms-transform: rotate(45deg) rotateX(-90deg);
-        -o-transform: rotate(45deg) rotateX(-90deg);
-        -webkit-transition: opacity 0.3s, transform 0.3s;
-        -moz-transition: opacity 0.3s, transform 0.3s;
-        -ms-transition: opacity 0.3s, transform 0.3s;
-        -o-transition: opacity 0.3s, transform 0.3s;
-
-        @include desktop {
-          top: 65px;
-          left: 15px;
-        }
-      }
-    }
-
-    .floor-shadow {
-      box-shadow: -100px 100px 80px rgba(0, 0, 0, 0.07),
-        -41.8px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
-        -22.34px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
-        -12.6px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
-        -6.7px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
-        -2.8px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
-    }
-
-    .wall {
-      position: absolute;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      z-index: 1;
-      left: 0;
-      bottom: 100%;
-      transform-origin: left bottom;
-      transform-style: preserve-3d;
-      transform: translateZ(0);
-      -webkit-transform: translateZ(0);
-      -moz-transform: translateZ(0);
-      -ms-transform: translateZ(0);
-      -o-transform: translateZ(0);
-    }
-
-    .left-wall {
-      background: #d9d9d9;
-      transform: rotateX(-90deg);
-      -webkit-transform: rotateX(-90deg);
-      -moz-transform: rotateX(-90deg);
-      -ms-transform: rotateX(-90deg);
-      -o-transform: rotateX(-90deg);
-      height: 60px;
-      width: 200px;
-
-      @include desktop {
-        height: 80px;
-        width: 300px;
-      }
-    }
-
-    .right-wall {
-      background: #e7e7e7;
-      transform: rotate(90deg) rotateX(-90deg);
-      -webkit-transform: rotate(90deg) rotateX(-90deg);
-      -moz-transform: rotate(90deg) rotateX(-90deg);
-      -ms-transform: rotate(90deg) rotateX(-90deg);
-      -o-transform: rotate(90deg) rotateX(-90deg);
-      height: 60px;
-      width: 200px;
-      left: 200px;
-
-      @include desktop {
-        height: 80px;
-        width: 300px;
-        left: 300px;
-      }
-    }
-  }
-}
-
-// ==========================================================
-
-// Parameters menu ==========================================
-
-.room-parameters {
-  background: $primary;
-  box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
-    0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
-    0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
-    0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
-    0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
-    0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
-  background-color: $primary;
-  color: $text;
-  height: 80%;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-
-  .parameters-header {
-    background-color: $secondary;
-    color: $primary;
-    border-radius: 5px 5px 0 0;
-    -webkit-border-radius: 5px 5px 0 0;
-    -moz-border-radius: 5px 5px 0 0;
-    -ms-border-radius: 5px 5px 0 0;
-    -o-border-radius: 5px 5px 0 0;
-  }
-
-  .parameters-title {
-    margin: 0;
-    padding: 10px;
-  }
-}
-
-// ==========================================================
