--- a/frontend/src/components/Simulator/sass/_parameters.scss
+++ b/frontend/src/components/Simulator/sass/_parameters.scss
@@ -10,7 +10,7 @@
     0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
   background-color: $primary;
   color: $text;
-  height: 80%;
+  width: 100%;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -30,6 +30,130 @@
   .parameters-title {
     margin: 0;
     padding: 10px;
+  }
+}
+
+// ==========================================================
+
+// Controllers div ==========================================
+
+.controllers-div {
+  margin: 15px;
+}
+
+.shadow {
+  box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
+    0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
+    0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
+    0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
+    0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
+    0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
+}
+
+.range {
+  margin-bottom: 20px;
+  height: 80px;
+  background-color: $primary;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  padding: 0 65px 0 45px;
+
+  .field {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+
+    .value {
+      position: absolute;
+      font-size: 1.125rem;
+      font-weight: 600;
+      color: $text;
+    }
+    .value.left {
+      left: -22px;
+    }
+
+    .value.right {
+      right: -43px;
+    }
+
+    input {
+      -webkit-appearance: none;
+      height: 3px;
+      width: 100%;
+      background: $secondary;
+      border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -ms-border-radius: 5px;
+      -o-border-radius: 5px;
+      outline: none;
+      border: none;
+
+      &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
+          0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
+          0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
+          0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
+          0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
+          0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
+        background: $secondary;
+        height: 20px;
+        width: 20px;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        border: 1px sold $primary;
+        cursor: pointer;
+      }
+    }
+  }
+  .slider-value {
+    position: relative;
+    width: 100%;
+
+    span {
+      position: absolute;
+      height: 45px;
+      width: 45px;
+      color: $primary;
+      font-weight: 500;
+      top: -40px;
+      transform: translateX(-50%);
+      -webkit-transform: translateX(-50%);
+      -moz-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+      -o-transform: translateX(-50%);
+      line-height: 55px;
+      z-index: 2;
+
+      &::after {
+        position: absolute;
+        content: "";
+        height: 45px;
+        width: 45px;
+        background: $secondary;
+        left: 50%;
+        transform: translateX(-50%) rotate(45deg);
+        -webkit-transform: translateX(-50%) rotate(45deg);
+        -moz-transform: translateX(-50%) rotate(45deg);
+        -ms-transform: translateX(-50%) rotate(45deg);
+        -o-transform: translateX(-50%) rotate(45deg);
+        border: 3px solid $primary;
+        border-top-left-radius: 50%;
+        border-top-right-radius: 50%;
+        border-bottom-left-radius: 50%;
+        z-index: -1;
+      }
+    }
   }
 }
 
