--- a/frontend/src/components/Simulator/sass/_parameters.scss
+++ b/frontend/src/components/Simulator/sass/_parameters.scss
@@ -126,6 +126,7 @@
       width: 45px;
       color: $primary;
       font-weight: 500;
+      left: 50%;
       top: -40px;
       transform: translateX(-50%);
       -webkit-transform: translateX(-50%);
