Empezando a implementar room padre para pasar parametros

--- a/frontend/src/components/Simulator/sass/_parameters.scss
+++ b/frontend/src/components/Simulator/sass/_parameters.scss
@@ -11,6 +11,7 @@
   background-color: $primary;
   color: $text;
   width: 100%;
+  margin-bottom: 10px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
