--- a/frontend/src/sass/main.css
+++ b/frontend/src/sass/main.css
@@ -333,6 +333,7 @@
   background-color: #ecf0f1;
   color: #727272;
   width: 100%;
+  margin-bottom: 10px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
