--- a/frontend/src/sass/main.css
+++ b/frontend/src/sass/main.css
@@ -113,6 +113,20 @@
   }
 }
 
+.room-container .room .iso-element .student-wrapper .mask {
+  z-index: 3;
+  position: absolute;
+  zoom: 0.7;
+  top: -70px;
+  left: 25px;
+}
+
+@media only screen and (min-width: 992px) {
+  .room-container .room .iso-element .student-wrapper .mask {
+    zoom: 1;
+  }
+}
+
 @media only screen and (min-width: 992px) {
   .room-container .room .iso-element .student-wrapper {
     top: 40px;
