--- a/frontend/src/components/Simulator/sass/_parameters.scss
+++ b/frontend/src/components/Simulator/sass/_parameters.scss
@@ -10,8 +10,8 @@
     0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
   background-color: $primary;
   color: $text;
-  width: 100%;
-  margin-bottom: 10px;
+  max-width: 95%;
+  margin: 0;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -31,6 +31,10 @@
   .parameters-title {
     margin: 0;
     padding: 10px;
+  }
+
+  @include desktop {
+    max-width: 100%;
   }
 }
 
@@ -142,27 +146,94 @@
   }
 }
 
-.mask-selector-btn {
-  img {
-    zoom: 1.5;
+.mask-selector-div {
+  font-size: 0.875rem;
+  letter-spacing: 0.03em;
+  font-feature-settings: "tnum" 1;
+  font-variant-numeric: tabular-nums;
+  text-align: center;
+  color: #69696c;
+
+  ol {
+    li {
+      box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
+        0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
+        0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
+        0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
+        0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
+        0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0px;
+      padding: 10px;
+      cursor: pointer;
+      width: 25%;
+
+      &:hover {
+        transform: scale(1.1);
+        box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
+          0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
+          0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
+          0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
+          0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
+          0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+      }
+
+      &:active {
+        transform: scale(0.96);
+        -webkit-transform: scale(0.96);
+        -moz-transform: scale(0.96);
+        -ms-transform: scale(0.96);
+        -o-transform: scale(0.96);
+      }
+
+      &:enabled {
+        background-color: $secondary;
+      }
+
+      p {
+        font-size: 12px;
+      }
+
+      img {
+        width: 50px;
+        display: block;
+      }
+      border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -ms-border-radius: 5px;
+      -o-border-radius: 5px;
+
+      @include tablet {
+        margin: 5px;
+      }
+    }
+    box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
+      0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
+      0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
+      0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
+      0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
+      0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background: $primary;
+    padding: 10px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
   }
-  all: none;
-  box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
-    0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
-    0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
-    0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
-    0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
-    0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
-  background: none;
-  border: none;
-  outline: none;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  margin-left: 5px;
-  margin-right: 5px;
+  /* Botones de mascara */
 }
 
 // ==========================================================
