--- a/frontend/src/sass/main.css
+++ b/frontend/src/sass/main.css
@@ -377,7 +377,13 @@
 }
 
 .controllers-div {
-  margin: 15px;
+  margin: 5px;
+}
+
+@media only screen and (min-width: 768px) {
+  .controllers-div {
+    margin: 15px;
+  }
 }
 
 .shadow {
